# aathu-lang

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
assets/branding/: colors.md
assets/diagrams/: architecture.md  compiler-pipeline.md
contrib/hooks/: pre-commit
contrib/scripts/: install-hooks.sh
contrib/templates/: new-crate.toml  new-module.rs
crates/aathu-codegen/: Cargo.toml
crates/aathu-core/: Cargo.toml
crates/aathu-diagnostics/: Cargo.toml
crates/aathu-driver/: Cargo.toml
crates/aathu-driver/src/: config.rs  lib.rs  pipeline.rs  session.rs
crates/aathu-hir/: Cargo.toml
crates/aathu-lexer/: Cargo.toml
crates/aathu-mir/: Cargo.toml
crates/aathu-parser/: Cargo.toml
crates/aathu-query/: Cargo.toml
crates/aathu-runtime/: Cargo.toml
crates/aathu-testing/: Cargo.toml
crates/aathu-typeck/: Cargo.toml
crates/aathu-vm/: Cargo.toml
docs/architecture/: lsp-architecture.md  package-manager.md  vm-architecture.md
docs/design/: concurrency-model.md  memory-model.md  module-system.md  overview.md
docs/governance/: CODE_OF_CONDUCT.md  GOVERNANCE.md  ROADMAP.md
docs/specs/: bytecode-format.md  grammar.ebnf  package-manifest.md
editors/emacs/: aathu-mode.el
editors/sublime/: aathu.sublime-syntax
editors/tree-sitter-aathu/: grammar.js  package.json
editors/vscode/: language-configuration.json  package.json  tsconfig.json
editors/zed/: extension.toml
examples/: fibonacci.aathu  file_watcher.aathu  hello_world.aathu  http_server.aathu  json_processor.aathu  todo_app.aathu  web_scraper.aathu
examples/automation/: backup.aathu  deploy.aathu  monitor.aathu
examples/concurrency/: channels.aathu  parallel.aathu
examples/data/: csv_parser.aathu  database.aathu
examples/web/: rest_api.aathu  websocket.aathu
infra/ansible/: playbook.yml
infra/docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
rfcs/: 0001-language-overview.md  0002-type-system.md
scripts/: build.sh  release.sh  setup.sh  test.sh
sdk/go/: go.mod
stdlib/: Cargo.toml
tools/aathu-lsp/: Cargo.toml
tools/aathu-lsp/src/: document.rs  main.rs  server.rs  state.rs
tools/aathu-lsp/src/handlers/: completion.rs  formatting.rs  goto_definition.rs  hover.rs  mod.rs  references.rs  rename.rs
(+231 files in other folders)
