[package]
name = "aathu-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Compiler driver and pipeline orchestration for aathu-lang"

[dependencies]
aathu-core.workspace = true
aathu-lexer.workspace = true
aathu-parser.workspace = true
aathu-hir.workspace = true
aathu-mir.workspace = true
aathu-typeck.workspace = true
aathu-codegen.workspace = true
aathu-diagnostics.workspace = true
